# oct_viewer

./: .gitignore  README.md  dat_generator.py  design_ui.py  generator.py  main.py  oop_main.py  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  smart_graphics.py
ui/: design.ui
