[project]
name = "oct_viewer"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "darkdetect>=0.8.0",
    "matplotlib>=3.7.5",
    "numpy==1.24.4",
    "pyside2>=5.15.2.1",
]

[dependency-groups]
dev = [
    "pyside2-stubs>=5.15.2.1.2",
]
